# expression_evaluator

./: .gitignore  .lexer.cpp.swp  .main.cpp.swp  .token.hpp.swp  CMakeLists.txt  README.md  a.out  evaluate.cpp  evaluate.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  main.cpp  parse.cpp  parse.hpp  parser.cpp  parser.hpp  random_expressions_test.txt  random_expressions_var.txt  tags  token.cpp  token.hpp  tools.cpp  tools.hpp
